--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,9 +1,9 @@
 {
-  "references": [],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
